# oracledb-toolkit

./: .gitignore  .sampleenv  LICENSE  README.md  example.py  pyproject.toml  requirements.txt  samplequery.py
src/: config.py  connection.py  logger.py
src/oracledb_toolkit/: connection.py  logger.py
